# mcp-sentinel

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/launch/: CHANNELS_AND_CHECKLIST.md  DEVTO_ARTICLE.md  SHOW_HN.md  X_THREAD.md
src/mcp_sentinel/: __init__.py  cli.py  engine.py  models.py  severity.py
src/mcp_sentinel/llm/: __init__.py  deepcheck.py
src/mcp_sentinel/parsers/: __init__.py  manifest_loader.py  normalize.py  settings_loader.py  stdio_probe.py
src/mcp_sentinel/report/: __init__.py  json_out.py  markdown.py  sarif.py
src/mcp_sentinel/rules/: __init__.py  base.py  capabilities.py  poisoning.py  scope.py  secrets.py  supplychain.py
src/mcp_sentinel/rules/data/: rules.yaml
tests/: conftest.py  test_cli.py  test_parsers.py  test_report.py  test_rules.py
tests/fixtures/: clean_settings.json  malformed.json  manifest_min.json  overbroad_tool.json  poisoned_settings.json  secrets_env.json  unpinned_npx.json
