[project]
name = "mcp-sentinel"
version = "0.1.0"
description = "Static security linter for the Model Context Protocol (MCP) trust boundary — catches tool poisoning, dangerous capabilities, exposed secrets, and supply-chain risk in mcpServers configs and tool manifests. Offline, free, SARIF output."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dhanush Shankar" }]
keywords = ["mcp", "model-context-protocol", "security", "sast", "prompt-injection",
            "tool-poisoning", "llm-security", "ai-security", "sarif", "supply-chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["openai>=1.30", "anthropic>=0.30"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
mcp-sentinel = "mcp_sentinel.cli:app"

[project.urls]
Homepage = "https://github.com/Danush-Aries/mcp-sentinel"
Repository = "https://github.com/Danush-Aries/mcp-sentinel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
